reverting the height fix as it breaks the homepage image.

--- a/docroot/sites/all/themes/ambitious/sass/all.scss
+++ b/docroot/sites/all/themes/ambitious/sass/all.scss
@@ -122,7 +122,7 @@ input[type=submit], input[type=text], input[type=search], input[type=tel], input
 		width:100%;
 		position:relative;
         height: auto;
-        // height: 770px;
+        height: 770px;
 		overflow: hidden;
         .region-image-holder{//this dom needs to be refactored wheels within wheels
             height: 100%;
